mds: fix potential re-evaluate stray dentry in _unlink_local_finish

If MDS handles cap release before _unlink_local_finish, then when MDS
processes _unlink_local_finish, eval_stray might be re-entered twice,
so this will cause crashing.

Fixes: http://tracker.ceph.com/issues/38263

Signed-off-by: Zhi Zhang <zhangz.david@outlook.com>